fix: profile styles not showing due to class name + additional styling

--- a/frontend/src/app/pages/profile/profile.component.css
+++ b/frontend/src/app/pages/profile/profile.component.css
@@ -9,8 +9,7 @@ a {
   align-items: center;
 }
 
-.profile-box,
-.profile-form {
+.profile-box {
   background-color: white;
   padding: 20px;
   border-radius: 10px;
@@ -27,19 +26,21 @@ a {
   max-width: 400px;
 }
 
-.profile-box h2,
-.profile-form h2 {
+.profile-box h2 {
   text-align: left;
 }
 
-.profile-details,
-.profile-form-details {
+label[for="lastName"], label[for="firstName"] {
+  margin-right: 5px;
+  font-weight: bold;
+}
+
+.profile-details {
   margin-top: 20px;
   text-align: left;
 }
 
-.profile-details p,
-.profile-form-details p {
+.profile-details p {
   margin: 5px 0;
 }
 
@@ -47,7 +48,7 @@ a {
   background-color: red;
 }
 .profile-form .form-group {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .profile-details .interests {
@@ -57,6 +58,11 @@ a {
 .profile-details .interests ul {
   list-style-type: disc;
   margin-left: 20px;
+}
+
+.row {
+  margin-top: 10px;
+  gap: 10px;
 }
 
 .error {
